# cWebServer

./: CMakeLists.txt  common.h  server.c
controller/: CMakeLists.txt  controller.c  controller.h
data/: data.json
model/: CMakeLists.txt  model.c  model.h
templates/: 404.html  gen.html  main.html
view/: CMakeLists.txt  view.c  view.h
